# qna

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  log4rs.yaml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20240123194434_create_accounts_table.up.sql  20240124181204_extend_questions_table.down.sql  20240124181204_extend_questions_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: account.rs  config.rs  error.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: answer.rs  pagination.rs  question.rs
