[package]
name = "qna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
handle-errors = {path = "handle-errors"}
uuid = { version = "1.5.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
strip = true
