[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qna = { path = "..", version = "1.0.0" }
dotenv = "0.15.0"
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
